DevTools: [Styles] Fix "Show inherited" checkbox vertical alignment
This was a regression from r163448

R=aandrey, eustas, vsevik
BUG=331289
NOTRY=true

Review URL: https://codereview.chromium.org/131493003

git-svn-id: svn://svn.chromium.org/blink/trunk@164855 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/sidebarPane.css
+++ b/front_end/sidebarPane.css
@@ -170,7 +170,7 @@
 }
 
 .sidebar-pane-toolbar > label > input {
-    vertical-align: -2px;
+    vertical-align: bottom;
 }
 
 .sidebar-pane-toolbar > label.scripts-callstack-async {
